# project

./: .gitignore  config.py  filtered_urls.txt  main.py  pyproject.toml  scraper.py  supabase_upload.py  webscrapping-walkthrough-1.ipynb
articles-fraud/: financial-risk-fraud_2.txt  finra-investors-financial.txt  fraud-financial-might.txt  fraud-finra-financial_1.txt  fraud-genai-accounts.txt  investment-investors-investor.txt  mail-fraud-check_1.txt  scams-natural-disasters_1.txt
