[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "modal>=1.2.1",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "streamlit>=1.51.0",
    "supabase>=2.22.4",
]
